crates/icydb-core/tests/ui/db/persisted_structured_payload_requires_structured_codec.stderr
error[E0277]: the trait bound `CloneDebugOnly: PersistedStructuredFieldCodec` is not satisfied
  --> tests/ui/db/persisted_structured_payload_requires_structured_codec.rs:18:54
   |
18 |     let _ = encode_persisted_structured_slot_payload(&value, "broken");
   |             ---------------------------------------- ^^^^^^ unsatisfied trait bound
   |             |
   |             required by a bound introduced by this call
   |
help: the trait `PersistedStructuredFieldCodec` is not implemented for `CloneDebugOnly`
  --> tests/ui/db/persisted_structured_payload_requires_structured_codec.rs:8:1
   |
 8 | struct CloneDebugOnly;
   | ^^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `PersistedStructuredFieldCodec`:
             BTreeMap<K, V>
             BTreeSet<T>
             Box<T>
             Option<T>
             Vec<T>
             bool
             i16
             i32
           and $N others
note: required by a bound in `encode_persisted_structured_slot_payload`
  --> src/db/data/persisted_row/codec/structured.rs
   |
   | pub fn encode_persisted_structured_slot_payload<T>(
   |        ---------------------------------------- required by a bound in this function
...
   |     T: PersistedStructuredFieldCodec,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `encode_persisted_structured_slot_payload`
